--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -13,6 +13,20 @@
             "options": {
                 "cwd": "C:\\TDM-GCC-64\\bin"
             }
+        },
+        {
+            "type": "shell",
+            "label": "cpp.exe build active file",
+            "command": "C:\\TDM-GCC-64\\bin\\cpp.exe",
+            "args": [
+                "-g",
+                "${file}",
+                "-o",
+                "${fileDirname}\\${fileBasenameNoExtension}.exe"
+            ],
+            "options": {
+                "cwd": "C:\\TDM-GCC-64\\bin"
+            }
         }
     ],
     "version": "2.0.0"
